--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Python Server</title>
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="shortcut icon" href="/img/icon_python.png">
     <script src="/script/common/util/timer.js"></script>
   </head>
 
   <body>
-    <h1>Python Server</h1>
-    <div id="timer" style="font-size: 20px;"></div>
+    <h1>トップページ</h1>
+    <span id="timer" style="font-size: 20px;"></span>
     <hr>
-    <a href="/cgi-bin/converter.py">接頭語自動追加ページ</a>
+    <ul>
+      <li><a href="/cgi-bin/converter/converter.py">接頭語自動追加ページ</a></li>
+      <li><a href="/cgi-bin/note/note.py">情報共有ページ</a></li>
+    </ul>
   </body>
 </html>
